# listx

./: .gitignore  README.md  listx.py  pyproject.toml  wsgi.py
app/: package.json
app/components/: FolderLister.tsx  FolderMetadata.tsx
app/pages/: index.tsx
app/styles/: Home.module.css
lister/components/: FolderLister.tsx  FolderSelector.tsx
lister/pages/: _app.tsx  index.tsx
listx/: app.py  service.py
