[tool.poetry]
name = "file-lister"
version = "0.1.0"
description = "File listing application"
authors = ["Charles Soetan <casoetan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
isort = "^5.9.2"
pylint = "^2.9.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = "static,assets,logs,media,templates,docs,__init__.py"
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_first_party = "listx"
multi_line_output = 3
order_by_type = "False"
combine_star = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
use_parentheses = "True"
line_length = 79
include_trailing_comma = "True"
lines_after_imports = 2
remove_redundant_aliases = "True"
color_output = "True"
ensure_newline_before_comments = "True"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
# addopts = "-p no:warnings"
testpaths = [
    "tests",
    "integration",
]
